[build-system]
requires = ["setuptools>=82.0.1"]
build-backend = "setuptools.build_meta"

[project]
name = "tls-line-protocol"
version = "0.1.0"
readme = "README.md"
requires-python = ">=3.11"
license = { file = "LICENSE" }
authors = [{ name = "Elliott Bache" }]

[project.optional-dependencies]
dev = [
  "pytest",
  "pytest-timeout",
  "sphinx",
  "sphinx-autodoc-typehints",
  "sphinxcontrib.mermaid",
  "sphinx_rtd_theme",
  "pre-commit",
  "ruff",
  "black",
  "isort",
  "mypy",
  "codespell",
  "myst-parser>=5.1.0",
  "breathe",
  "pytest-cov",
  "trustme"
]

[project.scripts]
tlslp-client = "tlslp.client:main"
tlslp-server = "tlslp.server:main"

[tool.setuptools]
package-dir = {"" = "src"}

[tool.setuptools.packages.find]
where = ["src"]

# pyproject.toml
[tool.ruff]
line-length = 88
target-version = "py311"

[tool.ruff.lint]
select = ["E","F","I","UP","B","SIM","S","PERF","RUF"]
ignore = ["E203", "E501"]  # let the formatter handle wrapping
fixable = ["E","UP","SIM","PERF","RUF"]

[tool.ruff.lint.per-file-ignores]
"tests/**" = ["S101"]
"src/tests/**" = ["S101"]

[tool.ruff.format]
quote-style = "double"

[tool.black]
line-length = 88
target-version = ["py311"]
extend-exclude = "^(migrations|build|dist|.venv|_deps)/"

[tool.isort]
skip = [".venv", "migrations", "build", "dist"]
profile = "black"

[tool.mypy]
python_version = "3.11"
strict = false
warn_unused_configs = true
disallow_untyped_defs = true
ignore_missing_imports = true
files = ["src"]
explicit_package_bases = true
namespace_packages = true
mypy_path = ["src"]

[[tool.mypy.overrides]]
module = "tests.*"
ignore_errors = true

[tool.codespell]
skip = "./docs/_build,./build,./dist,./.venv,./docs/html,./src/include,./docs/_static,pyproject.toml,./WD,./build*,./cpp/build,./PRIVATE,./htmlcov,./certificates"
ignore-words-list = "teh,nd,seh,atleast,atmost"


[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["."]
addopts = [
  "-q",
  "--cov=src",
  "--cov-report=term-missing",
  "--cov-report=xml:coverage.xml",
  "--cov-report=html:htmlcov",
  "--cov-fail-under=85"
]